# e2m

./: .flake8  .gitignore  .markdownlint.json  LICENSE  Makefile  README-zh.md  README.md  config.yaml  config.yaml.example  pyproject.toml  pyrightconfig.json
.github/workflows/: api_health_check.yml
docs/faq/: FAQ-en.md  FAQ-zh.md
e2m/configs/parsers/: base.py
e2m/parsers/: base.py
e2m/parsers/doc/: pdf_parser.py
intro/: intro-en.ipynb  intro-zh.ipynb
intro/demo/: Lecture Notes in Artificial Intelligence.md
tests/: test_e2m.py
tests/parsers/: test.docx  test.html  test_docx_parser.py  test_html_parser.py  test_pdf_parser.py  test_pptx_parser.py  test_url_parser.py
wisup_e2m/: __init__.py
wisup_e2m/api/: config.py  dependencies.py  main.py  models.py  services.py
wisup_e2m/configs/: base.py
wisup_e2m/configs/converters/: __init__.py  base.py  image_converter_config.py  text_converter_config.py
wisup_e2m/configs/parsers/: __init__.py  base.py  doc_parser_config.py  docx_parser_config.py  epub_parser_config.py  html_parser_config.py  pdf_parser_config.py  ppt_parser_config.py  pptx_parser_config.py  url_parser_config.py  voice_parser_config.py
wisup_e2m/converters/: base.py  image_converter.py  main.py  text_converter.py
wisup_e2m/converters/strategies/: base.py  litellm_strategy.py  zhipuai_strategy.py
wisup_e2m/converters/strategies/prompts/: __init__.py
wisup_e2m/parsers/: base.py  main.py
wisup_e2m/parsers/aud/: voice_parser.py
wisup_e2m/parsers/doc/: doc_parser.py  docx_parser.py  epub_parser.py  html_parser.py  pdf_parser.py  ppt_parser.py  pptx_parser.py  url_parser.py
wisup_e2m/utils/: doc_util.py  docx_util.py  epub_util.py  factory.py  image_util.py  libreoffice.py  llm_utils.py  pdf_util.py  ppt_util.py  pptx_util.py  web_util.py
wisup_e2m/utils/scripts/: marker_convert_single.py  pdf_to_images.py  surya_detect_layout.py
